force-app/main/default/objects/Opportunity/fields/agency_collection_providers__c.field-meta.xml
<CustomField>
    <fullName>agency_collection_providers__c</fullName>
    <label>agency collection providers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>