force-app/main/default/objects/Opportunity/fields/Amount_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_After_Discount__c</fullName>
    <formula>Amount  -  (Amount  *   Discount_by_Opp_Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>