force-app/main/default/objects/Opportunity/fields/Amount_of_SACC_commitments_due__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_SACC_commitments_due__c</fullName>
    <label>Amount of SACC commitments due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>