force-app/main/default/objects/Opportunity/fields/Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Age__c</fullName>
    <description>Applicant Age</description>
    <label>Applicant Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>