force-app/main/default/objects/Opportunity/fields/Approval_Record__c.field-meta.xml
<CustomField>
    <fullName>Approval_Record__c</fullName>
    <description>Approval Record</description>
    <label>Approval Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>