force-app/main/default/objects/Opportunity/fields/Average_monthly_amount_of_Courts_and_Fin__c.field-meta.xml
<CustomField>
    <fullName>Average_monthly_amount_of_Courts_and_Fin__c</fullName>
    <label>Average monthly amount of Courts and Fin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>