force-app/main/default/objects/Opportunity/fields/Avg_monthl_Amt_of_Courts_and_Fines_388__c.field-meta.xml
<CustomField>
    <fullName>Avg_monthl_Amt_of_Courts_and_Fines_388__c</fullName>
    <description>Avg monthl Amt of Courts and Fines (388)</description>
    <label>Avg monthl Amt of Courts and Fines (388)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>