force-app/main/default/objects/Opportunity/fields/Avg_Monthly_Risk_Merchant_Spend_226__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Risk_Merchant_Spend_226__c</fullName>
    <description>Avg Monthly Risk Merchant Spend (226)</description>
    <label>Avg Monthly Risk Merchant Spend (226)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>