force-app/main/default/objects/Opportunity/fields/Bank_Report_Gov_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Bank_Report_Gov_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Report Gov Benefit</label>
    <type>Checkbox</type>
</CustomField>