force-app/main/default/objects/Opportunity/fields/Collection_agency_transactions__c.field-meta.xml
<CustomField>
    <fullName>Collection_agency_transactions__c</fullName>
    <label>Collection agency transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>