force-app/main/default/objects/Opportunity/fields/Courts_and_Fines_transactions__c.field-meta.xml
<CustomField>
    <fullName>Courts_and_Fines_transactions__c</fullName>
    <label>Courts and Fines transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>