force-app/main/default/objects/Opportunity/fields/Created_Month_Smaller__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_Smaller__c</fullName>
    <formula>IF(MONTH(DATEVALUE(date__c)) &lt; MONTH(TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month Smaller</label>
    <type>Checkbox</type>
</CustomField>