force-app/main/default/objects/Opportunity/fields/Custom1__c.field-meta.xml
<CustomField>
    <fullName>Custom1__c</fullName>
    <label>Custom1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>