force-app/main/default/objects/Opportunity/fields/Custom2__c.field-meta.xml
<CustomField>
    <fullName>Custom2__c</fullName>
    <label>Custom2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>