force-app/main/default/objects/Opportunity/fields/Custom3__c.field-meta.xml
<CustomField>
    <fullName>Custom3__c</fullName>
    <label>Custom3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>