force-app/main/default/objects/Opportunity/fields/Deposit_spent_on_DOD_204__c.field-meta.xml
<CustomField>
    <fullName>Deposit_spent_on_DOD_204__c</fullName>
    <description>Deposit spent on DOD(204)</description>
    <label>Deposit spent on DOD(204)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>