force-app/main/default/objects/Opportunity/fields/Deposit_spent_on_DOD__c.field-meta.xml
<CustomField>
    <fullName>Deposit_spent_on_DOD__c</fullName>
    <label>Deposit spent on DOD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>