force-app/main/default/objects/Opportunity/fields/Deposits_since_last_dishonour_221__c.field-meta.xml
<CustomField>
    <fullName>Deposits_since_last_dishonour_221__c</fullName>
    <description>Deposits since last dishonour (221)</description>
    <label>Deposits since last dishonour (221)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>