force-app/main/default/objects/Opportunity/fields/Deposits_since_last_dishonour__c.field-meta.xml
<CustomField>
    <fullName>Deposits_since_last_dishonour__c</fullName>
    <description>Deposits since last dishonour</description>
    <label>Deposits since last dishonour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>