force-app/main/default/objects/Opportunity/fields/Discount_by_Opp_Tier__c.field-meta.xml
<CustomField>
    <fullName>Discount_by_Opp_Tier__c</fullName>
    <formula>CASE(
  TEXT( Opportunity_Tier__c ),
  &apos;T1&apos;,0.10,
  &apos;T2&apos;,0.20,
  &apos;T3&apos;,0.30,
  &apos;T4&apos;,0.40,
  &apos;T5&apos;,0.50,
   0
  

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount by Opp Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>