force-app/main/default/objects/Opportunity/fields/Discount_Per__c.field-meta.xml
<CustomField>
    <fullName>Discount_Per__c</fullName>
    <description>Displays the percentage to be subtracted from the total amount of the opportunity.</description>
    <inlineHelpText>If the customer is getting a discount on this opportunity, enter the amount here. For example, if the discount is 10%, enter the whole number 10.</inlineHelpText>
    <label>Discount Per</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>