force-app/main/default/objects/Opportunity/fields/Dishonours_For_Last_30_Days_DP907__c.field-meta.xml
<CustomField>
    <fullName>Dishonours_For_Last_30_Days_DP907__c</fullName>
    <description>Dishonours For Last 30 Days (DP907)</description>
    <label>Dishonours For Last 30 Days (DP907)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>