force-app/main/default/objects/Opportunity/fields/DNB_Scoring_Rate__c.field-meta.xml
<CustomField>
    <fullName>DNB_Scoring_Rate__c</fullName>
    <description>DNB Scoring Rate</description>
    <label>DNB Scoring Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>