force-app/main/default/objects/Opportunity/fields/DP_Budget_Management_Services__c.field-meta.xml
<CustomField>
    <fullName>DP_Budget_Management_Services__c</fullName>
    <label>DP Budget Management Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>