force-app/main/default/objects/Opportunity/fields/DP_Days_in_Overdrawn_For_Periodd__c.field-meta.xml
<CustomField>
    <fullName>DP_Days_in_Overdrawn_For_Periodd__c</fullName>
    <description>Days (in %) Overdrawn For Period</description>
    <label>Days (in %) Overdrawn For Period</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>