force-app/main/default/objects/Opportunity/fields/DP_Dishonours_203__c.field-meta.xml
<CustomField>
    <fullName>DP_Dishonours_203__c</fullName>
    <description>DP_Dishonours_203</description>
    <label>DP_Dishonours_203</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>