force-app/main/default/objects/Opportunity/fields/DP_Dishonours_Across_Primary_Acct_244__c.field-meta.xml
<CustomField>
    <fullName>DP_Dishonours_Across_Primary_Acct_244__c</fullName>
    <label>DP Dishonours Across Primary Acct 244</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>