force-app/main/default/objects/Opportunity/fields/DP_enders_with_uncleared_dishonours_233__c.field-meta.xml
<CustomField>
    <fullName>DP_enders_with_uncleared_dishonours_233__c</fullName>
    <label>DP enders with uncleared dishonours 233</label>
    <length>100</length>
    <type>Text</type>
</CustomField>