force-app/main/default/objects/Opportunity/fields/DP_Monthly_avg_of_SACC_repayments__c.field-meta.xml
<CustomField>
    <fullName>DP_Monthly_avg_of_SACC_repayments__c</fullName>
    <label>DP Monthly avg of SACC repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>