force-app/main/default/objects/Opportunity/fields/DP_Monthly_rent_amount_236__c.field-meta.xml
<CustomField>
    <fullName>DP_Monthly_rent_amount_236__c</fullName>
    <description>DP Monthly rent amount 236</description>
    <label>DP Monthly rent amount 236</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>