force-app/main/default/objects/Opportunity/fields/DP_No_Direct_Debits_On_Primary_Acct_355__c.field-meta.xml
<CustomField>
    <fullName>DP_No_Direct_Debits_On_Primary_Acct_355__c</fullName>
    <label>DP No Direct Debits On Primary Acct 355</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>