force-app/main/default/objects/Opportunity/fields/DP_Primary_income_frequency__c.field-meta.xml
<CustomField>
    <fullName>DP_Primary_income_frequency__c</fullName>
    <label>DP Primary income frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>