force-app/main/default/objects/Opportunity/fields/DP_Primary_income_last_pay_date__c.field-meta.xml
<CustomField>
    <fullName>DP_Primary_income_last_pay_date__c</fullName>
    <label>DP Primary income last pay date</label>
    <type>Date</type>
</CustomField>