force-app/main/default/objects/Opportunity/fields/DP_Total_Monthly_Benefit_Income__c.field-meta.xml
<CustomField>
    <fullName>DP_Total_Monthly_Benefit_Income__c</fullName>
    <label>DP Total Monthly Benefit Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>