force-app/main/default/objects/Opportunity/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>ExternalId</description>
    <label>ExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>