force-app/main/default/objects/Opportunity/fields/Frequency_for_largest_income_source__c.field-meta.xml
<CustomField>
    <fullName>Frequency_for_largest_income_source__c</fullName>
    <label>Frequency for largest income source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>