force-app/main/default/objects/Opportunity/fields/Hardship_Indicator_Gambling__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Indicator_Gambling__c</fullName>
    <label>Hardship Indicator Gambling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>