force-app/main/default/objects/Opportunity/fields/income_as_a_of_DP200_income__c.field-meta.xml
<CustomField>
    <fullName>income_as_a_of_DP200_income__c</fullName>
    <label>income as a of DP200 income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>