force-app/main/default/objects/Opportunity/fields/income_DP200_spend_on_high_risk_merch__c.field-meta.xml
<CustomField>
    <fullName>income_DP200_spend_on_high_risk_merch__c</fullName>
    <label>income DP200 spend on high risk merch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>