force-app/main/default/objects/Opportunity/fields/Income_source_is_a_government_benefit__c.field-meta.xml
<CustomField>
    <fullName>Income_source_is_a_government_benefit__c</fullName>
    <label>Income source is a government benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>