force-app/main/default/objects/Opportunity/fields/Income_source_is_other_income_549__c.field-meta.xml
<CustomField>
    <fullName>Income_source_is_other_income_549__c</fullName>
    <label>Income source is other income 549</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>