force-app/main/default/objects/Opportunity/fields/Income_spend_on_high_risk_merch_391__c.field-meta.xml
<CustomField>
    <fullName>Income_spend_on_high_risk_merch_391__c</fullName>
    <description>Income spend on high risk merch (391)</description>
    <label>Income spend on high risk merch (391)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>