force-app/main/default/objects/Opportunity/fields/Insolvency_Indicator_1_Yes__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Indicator_1_Yes__c</fullName>
    <description>Insolvency_Indicator_1_Yes</description>
    <label>Insolvency Indicator (1=Yes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>