force-app/main/default/objects/Opportunity/fields/Largest_income_source_day_of_week__c.field-meta.xml
<CustomField>
    <fullName>Largest_income_source_day_of_week__c</fullName>
    <label>Largest income source day of week</label>
    <length>100</length>
    <type>Text</type>
</CustomField>