force-app/main/default/objects/Opportunity/fields/Largest_income_Src_Avg_freq__c.field-meta.xml
<CustomField>
    <fullName>Largest_income_Src_Avg_freq__c</fullName>
    <label>Largest income Src Avg freq</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>