force-app/main/default/objects/Opportunity/fields/Largest_income_Src_day_of_week_364__c.field-meta.xml
<CustomField>
    <fullName>Largest_income_Src_day_of_week_364__c</fullName>
    <description>Largest income Src day of week (364)</description>
    <label>Largest income Src day of week (364)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>