force-app/main/default/objects/Opportunity/fields/Largest_income_Src_last_payment_amt__c.field-meta.xml
<CustomField>
    <fullName>Largest_income_Src_last_payment_amt__c</fullName>
    <label>Largest income Src last payment amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>