force-app/main/default/objects/Opportunity/fields/Last_pay_date_for_largest_inc_src_302__c.field-meta.xml
<CustomField>
    <fullName>Last_pay_date_for_largest_inc_src_302__c</fullName>
    <label>Last pay date for largest inc src 302</label>
    <type>Date</type>
</CustomField>