force-app/main/default/objects/Opportunity/fields/loan_dishonours__c.field-meta.xml
<CustomField>
    <fullName>loan_dishonours__c</fullName>
    <label>loan dishonours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>