force-app/main/default/objects/Opportunity/fields/loanId__c.field-meta.xml
<CustomField>
    <fullName>loanId__c</fullName>
    <label>loanId</label>
    <length>8</length>
    <type>Text</type>
</CustomField>