force-app/main/default/objects/Opportunity/fields/Monthly_Avg_of_SACC_repayments_222__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_of_SACC_repayments_222__c</fullName>
    <label>Monthly Avg of SACC repayments (222)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>