force-app/main/default/objects/Opportunity/fields/Monthly_ongoin_financial_commitment_224__c.field-meta.xml
<CustomField>
    <fullName>Monthly_ongoin_financial_commitment_224__c</fullName>
    <description>Monthly ongoin financial commitment(224)</description>
    <label>Monthly ongoin financial commitment(224)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>