force-app/main/default/objects/Opportunity/fields/Monthly_ongoing_financial_commitments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_ongoing_financial_commitments__c</fullName>
    <label>Monthly ongoing financial commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>