force-app/main/default/objects/Opportunity/fields/most_recent_loan_has_no_repayments__c.field-meta.xml
<CustomField>
    <fullName>most_recent_loan_has_no_repayments__c</fullName>
    <label>most recent loan has no repayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>