force-app/main/default/objects/Opportunity/fields/Multiple_Lenders_Hardship__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Lenders_Hardship__c</fullName>
    <label>Multiple Lenders Hardship</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>