force-app/main/default/objects/Opportunity/fields/Next_pay_date_for_largest_income_source__c.field-meta.xml
<CustomField>
    <fullName>Next_pay_date_for_largest_income_source__c</fullName>
    <label>Next pay date for largest income source</label>
    <type>Date</type>
</CustomField>