force-app/main/default/objects/Opportunity/fields/No_Direct_Debits_On_Primary_Acct_355__c.field-meta.xml
<CustomField>
    <fullName>No_Direct_Debits_On_Primary_Acct_355__c</fullName>
    <description>No. Direct Debits On Primary Acct (355)</description>
    <label>No. Direct Debits On Primary Acct (355)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>