force-app/main/default/objects/Opportunity/fields/Opp_number__c.field-meta.xml
<CustomField>
    <fullName>Opp_number__c</fullName>
    <label>Opp number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>