force-app/main/default/objects/Opportunity/fields/Opportunity_Origin__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Origin__c</fullName>
    <label>Opportunity Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>