force-app/main/default/objects/Opportunity/fields/Opportunity_Tier__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Tier__c</fullName>
    <label>Opportunity Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>T5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>