force-app/main/default/objects/Opportunity/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number</description>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>