force-app/main/default/objects/Opportunity/fields/Pay_frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_frequency__c</fullName>
    <description>Pay frequency</description>
    <label>Pay frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>