force-app/main/default/objects/Opportunity/fields/Primary_income_frequency_229__c.field-meta.xml
<CustomField>
    <fullName>Primary_income_frequency_229__c</fullName>
    <description>Primary income frequency (229)</description>
    <label>Primary income frequency (229)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>