force-app/main/default/objects/Opportunity/fields/Primary_regular_benefit_frequency__c.field-meta.xml
<CustomField>
    <fullName>Primary_regular_benefit_frequency__c</fullName>
    <label>Primary regular benefit frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>