force-app/main/default/objects/Opportunity/fields/Primary_regular_benefit_last_pay_date__c.field-meta.xml
<CustomField>
    <fullName>Primary_regular_benefit_last_pay_date__c</fullName>
    <label>Primary regular benefit last pay date</label>
    <type>Date</type>
</CustomField>