force-app/main/default/objects/Opportunity/fields/Primary_regular_benefit_monthly_amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_regular_benefit_monthly_amount__c</fullName>
    <label>Primary regular benefit monthly amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>