force-app/main/default/objects/Opportunity/fields/Purpose_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Loan__c</fullName>
    <label>Purpose of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Expenses</fullName>
            </value>
            <value>
                <fullName>Experiences &amp; Life Events</fullName>
            </value>
            <value>
                <fullName>Furniture or Appliances</fullName>
            </value>
            <value>
                <fullName>Home and Relocation Expenses</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lifestyle, Bills &amp; Expenses</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Other Expenses</fullName>
            </value>
            <value>
                <fullName>Repay Existing Debt</fullName>
            </value>
            <value>
                <fullName>School / Education / Work</fullName>
            </value>
            <value>
                <fullName>Travel Expenses</fullName>
            </value>
            <value>
                <fullName>Veterinary Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>