force-app/main/default/objects/Opportunity/fields/Reason_for_your_loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_your_loan__c</fullName>
    <description>Reason for your loan</description>
    <label>Reason for your loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>