force-app/main/default/objects/Opportunity/fields/SACC_commitments_due_next_month__c.field-meta.xml
<CustomField>
    <fullName>SACC_commitments_due_next_month__c</fullName>
    <label>SACC commitments due next month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>