force-app/main/default/objects/Opportunity/fields/Salary_Gov_Allowances_all_types_2117__c.field-meta.xml
<CustomField>
    <fullName>Salary_Gov_Allowances_all_types_2117__c</fullName>
    <description>Salary_Gov_Allowances_all_types_2117</description>
    <label>Salary &amp; Gov Allowances(all types)(2117)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>