force-app/main/default/objects/Opportunity/fields/Summary_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Summary_Expenses__c</fullName>
    <label>Summary Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>