force-app/main/default/objects/Opportunity/fields/Summary_Income__c.field-meta.xml
<CustomField>
    <fullName>Summary_Income__c</fullName>
    <label>Summary Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>