force-app/main/default/objects/Opportunity/fields/Summary_Income_CV__c.field-meta.xml
<CustomField>
    <fullName>Summary_Income_CV__c</fullName>
    <description>Summary Income CV</description>
    <label>Summary Income CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>