force-app/main/default/objects/Opportunity/fields/Summary_Total__c.field-meta.xml
<CustomField>
    <fullName>Summary_Total__c</fullName>
    <label>Summary Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>