force-app/main/default/objects/Opportunity/fields/Term_in_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Term_in_Weeks__c</fullName>
    <description>Term in Weeks</description>
    <label>Term in Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>