force-app/main/default/objects/Opportunity/fields/Total_emergency_benefits_payments_324__c.field-meta.xml
<CustomField>
    <fullName>Total_emergency_benefits_payments_324__c</fullName>
    <description>Total emergency benefits payments(324)</description>
    <label>Total emergency benefits payments(324)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>