force-app/main/default/objects/Opportunity/fields/Total_Monthly_Benefit_Income_DP_201__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Benefit_Income_DP_201__c</fullName>
    <description>Total Monthly Benefit Income (DP-201)</description>
    <label>Total Monthly Benefit Income (DP-201)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>