force-app/main/default/objects/Opportunity/fields/Total_monthly_credits_200__c.field-meta.xml
<CustomField>
    <fullName>Total_monthly_credits_200__c</fullName>
    <description>Total monthly credits (200)</description>
    <label>Total monthly credits (200)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>