force-app/main/default/objects/Opportunity/fields/Total_monthly_credits__c.field-meta.xml
<CustomField>
    <fullName>Total_monthly_credits__c</fullName>
    <description>Total monthly credits</description>
    <label>Total monthly credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>