force-app/main/default/objects/Opportunity/fields/Total_monthly_income_ongoin_Reg_231__c.field-meta.xml
<CustomField>
    <fullName>Total_monthly_income_ongoin_Reg_231__c</fullName>
    <label>Total monthly income ongoin Reg 231</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>