force-app/main/default/objects/Opportunity/fields/Total_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayments__c</fullName>
    <description>Total Repayments</description>
    <label>Total Repayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>