force-app/main/default/objects/Opportunity/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking Number</description>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>